--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,13 @@
     {% endif %}
   </head>
   <body>
-    <div>Microblog: <a href="/index">Home</a></div>
+    <div>Microblog:
+      <a href="{{ url_for('index')}}">Home</a>
+      {% if g.user.is_authenticated %}
+      | <a href="{{ url_for('logout')}}">Logout</a>
+      {% endif %}
+    </div>
+    <!--<div>Microblog: <a href="/index">Home</a></div>-->
     <hr>
     {% with message = get_flashed_messages() %}
     {% if messages %}
